# libcpu

./: .gitignore  .travis.yml  CMakeLists.txt  HISTORY  LICENSE.txt  Makefile  README  README.md  TODO  build.sh  install-deps.sh
.circleci/: config.yml
CMake/: AppleMultiArch.cmake  BuildConfigH.cmake  FindLLVM.cmake  GetCPUCount.sh
arch/6502/: 6502_arch.cpp  6502_cc.h  6502_disasm.cpp  6502_interface.h  6502_internal.h  6502_isa.cpp  6502_isa.h  6502_recompile.cpp  6502_tag.cpp  6502_translate.cpp  6502_types.h  CMakeLists.txt  Makefile  arch_types.h  disasm.cpp  isa.cpp  libcpu_6502.h  recompile.cpp  tag.cpp
arch/arm/: CMakeLists.txt  arch_types.h  arm.cpp  arm_arch.cpp  arm_disasm.cpp  arm_interface.h  arm_internal.h  arm_recompile.cpp  arm_translate.cpp  arm_types.h  disasm.cpp  libcpu_arm.h  recompile.cpp
arch/fapra/: CMakeLists.txt  fapra_arch.cpp  fapra_disasm.cpp  fapra_interface.h  fapra_internal.h  fapra_translate.cpp  fapra_types.h
arch/i386/: CMakeLists.txt  i386.def  i386_arch.cpp  i386_arch.h  i386_cc.h  i386_decode.cpp  i386_decode.h  i386_disasm.cpp  i386_disasm.h  i386_instr.h  i386_internal.h  (+7 more)
arch/m68k/: CMakeLists.txt  Makefile  TODO  arch_types.h  disasm.cpp  isa.cpp  isa.h  libcpu_m68k.h  m68k.cpp  m68k_arch.cpp  m68k_disasm.cpp  m68k_interface.h  m68k_internal.h  m68k_isa.cpp  m68k_isa.h  m68k_tag.cpp  m68k_types.h  opcode_id.py  opcode_id.tab  tag.cpp
libcpu/: CMakeLists.txt  Makefile  arch.h  basicblock.cpp  basicblock.h  config.h.cmake  cpu_generic.cpp  cpu_generic.h  defines.h  disasm.cpp  disasm.h  fp.cpp  fp_types.h  frontend.cpp  frontend.h  function.cpp  function.h  idbg.cpp  interface.cpp  libcpu.h  libcpu_llvm.h  libcpu_main.cpp  netlong.h  optimize.cpp  optimize.h  platform.h  sha1.cpp  sha1.h  stat.cpp  stat.h  tag.cpp  tag.h  tag_generic.h  timings.cpp  timings.h  translate.cpp  translate.h  translate_all.cpp  translate_all.h  translate_singlestep.cpp  (+4 more)
libcpu/win32/msvc/: unistd.h
test/libloader/: CMakeLists.txt  loader.h  loader_base.h  loader_compat.h  loader_config.h.cmake  loader_defs.h  loader_endian.h  loader_error.h  loader_headers.h  loader_image.c  loader_image.h  loader_init.c  loader_iterator.c  loader_iterator.h  loader_registry.c  loader_registry.h  loader_section.h  loader_symbol.h  loader_types.h  test.c
test/libloader/elf/: elf32.h  elf64.h  elfXX.c  elf_common.c  elf_common.h
test/libnix/: CMakeLists.txt
test/libnix/nix/: CMakeLists.txt  nix-base.h  nix-bsd-cred.c  nix-bsd-dir.c  nix-bsd-file.c  nix-bsd-fs.c  nix-bsd-io.c  nix-bsd-mem.c  nix-bsd-nfs.c  nix-bsd-obsolete.c  nix-bsd-process.c  nix-bsd-signal.c  nix-bsd-system.c  nix-bsd-time.c  nix-bsd.h  nix-common.c  nix-config.h.cmake  nix-cred.c  nix-decls.h  nix-dir.c  nix-env.c  nix-env.h  nix-fd.c  nix-fd.h  nix-file.c  nix-file.h  nix-hostinfo.c  nix-hpux-cred.c  nix-init.c  nix-io-forse+nuovo.c.txt  nix-io.c  nix-ioctl.h  nix-linux-cred.c  nix-linux-file.c  nix-linux-fs.c  nix-linux-i386.c  nix-linux-mem.c  nix-linux-nfs.c  nix-linux-process.c  nix-linux-signal.c  (+25 more)
test/libnix/obsd41/: CMakeLists.txt  arc4random.c  arc4random.h  nix-obsd41-config.h.cmake  obsd41-args.h  obsd41-callbacks.c  obsd41-errno.h  obsd41-guest.h  obsd41-init.c  obsd41-ioctl-defs.h  obsd41-ioctl.c  obsd41-ioctl.h  obsd41-mman.h  obsd41-stat.h  obsd41-structs.c  obsd41-structs.h  obsd41-syscalls.c  obsd41-syscalls.h  obsd41-sysctl.h  obsd41-types.h  obsd41-us-syscall-priv.h  obsd41.sc  openbsd41.h
test/libnix/obsd41/arch/m88k/: obsd41-guest-types.h  obsd41-guest.c
test/libnix/obsd41/arch/sparc/: obsd41-guest-types.h  obsd41-guest.c
test/libnix/tools/sc2int/: CMakeLists.txt  lexer.l  lists.c  lists.h  parser.y  sc2int.c  sc2int.h  stuff.c  stuff.h
test/libnix/tools/sc2int/CMake/: FindBISON.cmake  FindFLEX.cmake
test/libnix/xec-compat/: CMakeLists.txt  xec-base.h.cmake
test/libnix/xec-compat/arch/: m88k-context.h
test/libnix/xec-compat/engine/: xec-mem-if.h  xec-monitor-priv.h  xec-monitor.c  xec-monitor.h  xec-param.h  xec-us-syscall-if.h  xec-us-syscall.c  xec-us-syscall.h
test/libnix/xec-compat/lib/: bsdqueue.h  xec-byte-order.h  xec-debug.h  xec-init.c  xec-log.c  xec-mem.c  xec-mem.h  xec-mmap-unix.c  xec-mmap-win32.c  xec-mmap.h  xec-xcpt-unix.c  xec-xcpt.h
test/m88k/: CMakeLists.txt  aout.h  coff.h  loader.c  loader.h  main.cpp  run88.cpp
upcl/: CMakeLists.txt  Makefile  ast.h  do.cpp  dumper.h  expression.cpp  lexer.l  main.cpp  parse.cpp  parse.h  parser.y  parser_orig.y  register_def.cpp  rint.h  sema_analyzer.cpp  signed_expression.cpp  simple_const_expr.cpp  sub_register_def.cpp  test_reg.cpp  types.h  unary_expression.cpp
upcl/ast/: ast.h  dumper.cpp  dumper.h  lexer.l  parser.y
upcl/c/: assign_expression.cpp  assign_expression.h  assign_statement.cpp  assign_statement.h  binary_expression.cpp  binary_expression.h  bit_combine_expression.cpp  bit_combine_expression.h  bit_slice_expression.cpp  bit_slice_expression.h  bound_register_def.h  bound_sub_register_def.h  cast_expression.cpp  cast_expression.h  constant_folding.cpp  decoder_operand_def.cpp  decoder_operand_def.h  decoder_operand_expression.cpp  decoder_operand_expression.h  expand_bit_slice_pass.cpp  expression.cpp  expression.h  expression_dumper.cpp  expression_dumper.h  fast_aliases.h  float_expression.h  hardwired_register_def.h  hardwired_sub_register_def.h  instruction.h  integer_expression.h  memory_ref_expression.cpp  memory_ref_expression.h  register_def.cpp  register_def.h  register_expression.cpp  register_expression.h  register_set.h  sema_analyzer.cpp  sema_analyzer.h  signed_expression.cpp  (+15 more)
upcl/cg/: c_register_set.cpp  generate.cpp  generate.h  libcpu_expression_generator.cpp
upcl/docs/: ebnf.txt  tests_expr.txt
upcl/examples/: 6502.def  80386.def  8086.def  8086_1.def  m68k.def  m88k.def  mips32.def  mips64.def  pdp1.def  sparc.def
upcl/sema/: convert.cpp  convert.h  expr_convert.cpp  expr_convert.h  register_dep_tracker.cpp  register_dep_tracker.h  register_file_builder.cpp  register_file_builder.h  register_info.h  simple_expr_evaluator.cpp  simple_expr_evaluator.h
(+113 files in other folders)
